tests/pass/matching/same order for binders3.mm0
sort s;
term a (x y: s):s;