tests/fail/matching/different binders order.mm0
sort s;
sort t;
term a: s > t > s;